@@ -4,6 +4,7 @@
     * Update url of sweethome
     * User can disable confirm dialog which appears before installing
     * Re-write the introduction of texlive
+    * Can refresh installing state of software items
 
 2010-07-10 CHEN Yangyang <skabyy@gmail.com>
 
